; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_v4l2-mem2mem.c_v4l2_m2m_streamoff.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_v4l2-mem2mem.c_v4l2_m2m_streamoff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { i32 }
%struct.v4l2_m2m_ctx = type { i32 }
%struct.videobuf_queue = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @v4l2_m2m_streamoff(%struct.file* %0, %struct.v4l2_m2m_ctx* %1, i32 %2) #0 {
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.v4l2_m2m_ctx*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.videobuf_queue*, align 8
  store %struct.file* %0, %struct.file** %4, align 8
  store %struct.v4l2_m2m_ctx* %1, %struct.v4l2_m2m_ctx** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.v4l2_m2m_ctx*, %struct.v4l2_m2m_ctx** %5, align 8
  %9 = load i32, i32* %6, align 4
  %10 = call %struct.videobuf_queue* @v4l2_m2m_get_vq(%struct.v4l2_m2m_ctx* %8, i32 %9)
  store %struct.videobuf_queue* %10, %struct.videobuf_queue** %7, align 8
  %11 = load %struct.videobuf_queue*, %struct.videobuf_queue** %7, align 8
  %12 = call i32 @videobuf_streamoff(%struct.videobuf_queue* %11)
  ret i32 %12
}

declare dso_local %struct.videobuf_queue* @v4l2_m2m_get_vq(%struct.v4l2_m2m_ctx*, i32) #1

declare dso_local i32 @videobuf_streamoff(%struct.videobuf_queue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
